16-Gateway-API/AGC/app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: akkc-app2
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 5678
  type: ClusterIP
