16-Gateway-API/AGC/app2/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: akkc-http-route
  namespace: akkc-app2
spec:
  parentRefs:
    - name: akkc-app-gateway
      namespace: akkc-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /app2
      backendRefs:
        - name: app2-service
          port: 80
